--- a/src/lib/Cells/Cell.scss
+++ b/src/lib/Cells/Cell.scss
@@ -1,30 +1,30 @@
-.cell-header {
-  input {
-    &[type='checkbox'] {
-      display: none;
+// .cell-header {
+//   input {
+//     &[type='checkbox'] {
+//       display: none;
 
-      &.visible {
-        display: block;
-      }
-    }
-  }
+//       &.visible {
+//         display: block;
+//       }
+//     }
+//   }
 
-  &:hover {
-    input {
-      &[type='checkbox'] {
-        display: block;
-      }
-    }
-  }
-}
+//   &:hover {
+//     input {
+//       &[type='checkbox'] {
+//         display: block;
+//       }
+//     }
+//   }
+// }
 
-.context-menu-option {
-  padding: 10px 40px 10px 20px;
-  font-size: 14px;
-  font-weight: 500;
-  cursor: pointer;
+// .context-menu-option {
+//   padding: 10px 40px 10px 20px;
+//   font-size: 14px;
+//   font-weight: 500;
+//   cursor: pointer;
 
-  &:hover {
-    background-color: #f2f2f2;
-  }
-}
+//   &:hover {
+//     background-color: #f2f2f2;
+//   }
+// }
