--- a/src/demo/Views/rate-cell-style.css
+++ b/src/demo/Views/rate-cell-style.css
@@ -1,18 +1,33 @@
-.rating {
-  unicode-bidi: bidi-override; 
-  direction: rtl;
+.rate {
+  float: left;
 }
-
-.rating > span {
-  display: inline-block;
-  position: relative;
-  width: 1.1em;
-  cursor: pointer;
-  color: gold;
+.rate:not(:checked) > input {
+  position:absolute;
+  top:-9999px;
 }
-.rating > span:hover:before,
-.rating > span:hover ~ span:before
-{
-    content: "\2605";
-    position: absolute;
+.rate:not(:checked) > label {
+  float:right;
+  width:1em;
+  overflow:hidden;
+  white-space:nowrap;
+  cursor:pointer;
+  font-size:1.3em;
+  color:#ccc;
+}
+.rate:not(:checked) > label:before {
+  content: '★ ';
+}
+.rate > input:checked ~ label {
+  color: #ffc700;    
+}
+.rate:not(:checked) > label:hover,
+.rate:not(:checked) > label:hover ~ label {
+  color: #deb217;  
+}
+.rate > input:checked + label:hover,
+.rate > input:checked + label:hover ~ label,
+.rate > input:checked ~ label:hover,
+.rate > input:checked ~ label:hover ~ label,
+.rate > label:hover ~ input:checked ~ label {
+  color: #c59b08;
 }
