--- a/src/samples/budgetPlannerSample/styling.scss
+++ b/src/samples/budgetPlannerSample/styling.scss
@@ -1,4 +1,4 @@
-.budget-planner {
+.rg-style-override.budget-planner {
     // override styles here
     @import '@silevis/reactgrid/dist/lib/assets/core.scss';
 }
