--- a/src/samples/multiUserSample/styling.scss
+++ b/src/samples/multiUserSample/styling.scss
@@ -1,4 +1,4 @@
-.multi-user-sample {
+.rg-style-override.multi-user-sample {
     // override styles here
     @import '@silevis/reactgrid/dist/lib/assets/core.scss';
 }
