--- a/src/samples/resizeCellSample/styling.scss
+++ b/src/samples/resizeCellSample/styling.scss
@@ -1,4 +1,4 @@
-.resize-cell-sample {
+.rg-style-override.resize-cell-sample {
     // override styles here
     @import '@silevis/reactgrid/dist/lib/assets/core.scss';
 }
