identity element by id

--- a/src/samples/budgetPlannerSample/styling.scss
+++ b/src/samples/budgetPlannerSample/styling.scss
@@ -1,4 +1,4 @@
-.rg-style-override.budget-planner {
+#budget-planner {
     // override styles here
-    @import '@silevis/reactgrid/dist/lib/assets/core.scss';
+    // @import '@silevis/reactgrid/dist/lib/assets/core.scss';
 }
