--- a/src/samples/dropdownNumberCellSample/styling.scss
+++ b/src/samples/dropdownNumberCellSample/styling.scss
@@ -1,4 +1,4 @@
-.rg-style-override.dropdown-number-cell-sample {
+#dropdown-number-cell-sample {
     // override styles here
     @import '@silevis/reactgrid/dist/lib/assets/core.scss';
 }
