--- a/src/samples/navigationSample/styling.scss
+++ b/src/samples/navigationSample/styling.scss
@@ -1,4 +1,4 @@
-.navigation-sample {
+#navigation-sample {
     // override styles here
     $primary-color:                     #f83586 !default;
     @import '@silevis/reactgrid/dist/lib/assets/core.scss';
