--- a/src/samples/rateCellSample/styling.scss
+++ b/src/samples/rateCellSample/styling.scss
@@ -1,4 +1,4 @@
-.rg-style-override.rate-cell-sample {
+#rate-cell-sample {
     // override styles here
-    @import '@silevis/reactgrid/dist/lib/assets/core.scss';
+    // @import '@silevis/reactgrid/dist/lib/assets/core.scss';
 }
