--- a/src/samples/allInOneSample/styling.scss
+++ b/src/samples/allInOneSample/styling.scss
@@ -1,4 +1,4 @@
-.rg-style-override.all-in-one {
+#all-in-one {
     // override styles here
     $primary-color: #5c00d4;
     @import '@silevis/reactgrid/dist/lib/assets/core.scss';
