--- a/src/samples/multiUserSample/styling.scss
+++ b/src/samples/multiUserSample/styling.scss
@@ -1,4 +1,4 @@
-.rg-style-override.multi-user-sample {
+#multi-user-sample {
     // override styles here
-    @import '@silevis/reactgrid/dist/lib/assets/core.scss';
+    // @import '@silevis/reactgrid/dist/lib/assets/core.scss';
 }
