--- a/src/cell-templates/rateCell/rate-cell-style.scss
+++ b/src/cell-templates/rateCell/rate-cell-style.scss
@@ -1,3 +1,8 @@
+$rate-star-color: #ffc700 !default;
+$rate-star-color-hover: #deb217  !default;
+$rate-star-color-pale: #c59b08 !default;
+$rate-star-color-disabled: #cccccc !default;
+
 .rate {
   float: left;
   & > label { margin-bottom: 0 }
@@ -5,30 +10,34 @@
     & > input {
       position:absolute;
       top:-9999px;
+      &:checked {
+        & + label:hover,
+        & + label:hover ~ label,
+        & ~ label:hover,
+        & ~ label:hover ~ label {
+          color: $rate-star-color-pale
+        }
+        & ~ label {
+          color: $rate-star-color
+        }
+      }
     }
     & > label {
-      float:right;
-      width:1em;
-      overflow:hidden;
-      white-space:nowrap;
-      cursor:pointer;
-      font-size:1.3em;
-      color:#ccc;
+      float: right;
+      width: 1em;
+      overflow: hidden;
+      white-space: nowrap;
+      cursor: pointer;
+      font-size: 1.3em;
+      color: $rate-star-color-disabled;
       &:before { content: '★ ' }
+      &:hover ~ input:checked ~ label {
+        color: $rate-star-color-pale
+      }
+      &:hover,
+      &:hover ~ label { 
+        color: $rate-star-color-hover
+      }
     }
-    & > label:hover,
-    & > label:hover ~ label { 
-      color: #deb217 
-    }
-  }
-  & > input:checked ~ label {
-    color: #ffc700
-  }
-  & > input:checked + label:hover,
-  & > input:checked + label:hover ~ label,
-  & > input:checked ~ label:hover,
-  & > input:checked ~ label:hover ~ label,
-  & > label:hover ~ input:checked ~ label {
-    color: #c59b08
   }
 }
