--- a/src/samples/stockMarketDataSample/styling.scss
+++ b/src/samples/stockMarketDataSample/styling.scss
@@ -1,37 +1,37 @@
 
 
- $base-red: rgba(255, 0, 0, 1);
- $transparent-base-red: rgba(255, 0, 0, 0);
- $base-green-yellow: rgba(0, 255, 0, 1);
- $transparent-base-green-yellow: rgba(0, 255, 0, 0);
+ $base-red:                       rgba(255, 0, 0, 1) !default;
+ $transparent-base-red:           rgba(255, 0, 0, 0) !default;
+ $base-green-yellow:              rgba(0, 255, 0, 1) !default;
+ $transparent-base-green-yellow:  rgba(0, 255, 0, 0) !default;
 
 .stock-market-cell-sample {
 
-      @keyframes background-red {
-        0% { background-color: $base-red; }
-        100% { background-color: $transparent-base-red; }
-      }
+  @keyframes background-red {
+    0% { background-color: $base-red; }
+    100% { background-color: $transparent-base-red; }
+  }
 
-      @keyframes background-green {
-        0% { background-color : $base-green-yellow; }
-        100% { background-color: $transparent-base-green-yellow; }
-      }
+  @keyframes background-green {
+    0% { background-color : $base-green-yellow; }
+    100% { background-color: $transparent-base-green-yellow; }
+  }
 
-    .red {
-        -webkit-animation: background-red 3s infinite; 
-        animation: background-red 3s infinite;
-    }
-    .greenyellow {
-        -webkit-animation: background-green 3s infinite; 
-        animation: background-green 3s infinite;
-    }
-     
-    .stockMarketBaseStyle{
-        display: flex;
-        width: 100%;
-        height: 100%;
-        align-items: center;
-       }
+  .red {
+    -webkit-animation: background-red 3s infinite; 
+    animation: background-red 3s infinite;
+  }
+  .greenyellow {
+    -webkit-animation: background-green 3s infinite; 
+    animation: background-green 3s infinite;
+  }
+
+  .stockMarketBaseStyle{
+    display: flex;
+    width: 100%;
+    height: 100%;
+    align-items: center;
+  }
 }
   
 
