added multiuser sample, fied flag cell, rate cell

--- a/src/cell-templates/flagCell/flag-cell-style.scss
+++ b/src/cell-templates/flagCell/flag-cell-style.scss
@@ -8,7 +8,7 @@
     background-repeat: no-repeat;
 }
 
-.rg-flag-input {
+.rg-flag-celleditor input {
     position: inherit;
     width: 100%;
     height: 100%;
@@ -19,3 +19,5 @@
     outline: none;
     font-family: inherit;
 }
+
+// usunac zbende klasy celleditra  i dodac popranwna domysla : rg-celleditor
