--- a/src/samples/cryptocurrencyMarketSample/styling.scss
+++ b/src/samples/cryptocurrencyMarketSample/styling.scss
@@ -1,4 +1,4 @@
-#stock-market-sample {
+#cryptocurrency-market-sample {
   // override styles here
   // @import '@silevis/reactgrid/dist/lib/assets/core.scss';
 }
