--- a/src/samples/datagridSample/styling.scss
+++ b/src/samples/datagridSample/styling.scss
@@ -1,4 +1,4 @@
-#multi-user-sample {
+#datagrid-sample {
     // override styles here
     // @import '@silevis/reactgrid/dist/lib/assets/core.scss';
 }
