--- a/src/cell-templates/flagCell/flag-cell-style.scss
+++ b/src/cell-templates/flagCell/flag-cell-style.scss
@@ -1,23 +1,12 @@
+.rg-flag-cell {
+    justify-content: center;
+}
+  
 .rg-flag-wrapper {
-    margin: auto auto;
-    width: 35px;
-    height: 21px;
+    width: calc(50%);
+    height: 80%;
     background-size: cover;
     border: 1px solid #cccccc;
     background-position: center center;
     background-repeat: no-repeat;
 }
-
-.rg-flag-celleditor input {
-    position: inherit;
-    width: 100%;
-    height: 100%;
-    padding: 0;
-    border: 0;
-    background: transparent;
-    font-size: 1em;
-    outline: none;
-    font-family: inherit;
-}
-
-// usunac zbende klasy celleditra  i dodac popranwna domysla : rg-celleditor
