--- a/src/samples/budgetPlanner/budget-planner.scss
+++ b/src/samples/budgetPlanner/budget-planner.scss
@@ -1,10 +1,10 @@
-#budget-planning-container {
+.budget-planning-container {
   width: 100%;
   padding: 0px 20px;
   display: flex;
 }
 
-#budget-planning-header {
+.budget-planning-header {
   width: 100%;
   height: 10vh;
   display: flex;
@@ -14,14 +14,14 @@
   }
 }
 
-#budget-planning-react-grid {
+.budget-planning-react-grid {
   width: 100%;
   height: 60vh;
   display:flex;
   flex-direction: column;
 }
 
-#variable-views-budget-planner {
+.variable-views-budget-planner {
   display: flex;
   flex-direction: column;
   margin-bottom: 20px;
@@ -29,12 +29,12 @@
   overflow: auto;
 }
 
-#nevy-blue-header{
+.nevy-blue-header{
   background-color: #344675!important;
   color: white
  }
 
-#grey-header {
+.grey-header {
   background-color: #ccc;
   color: black;
 }
