--- a/src/samples/budgetPlanner/budget-planner.scss
+++ b/src/samples/budgetPlanner/budget-planner.scss
@@ -16,7 +16,7 @@
 
 .budget-planning-react-grid {
   width: 100%;
-  height: 300px;
+  height: 400px;
   overflow: scroll;
   display:flex;
   flex-direction: column;
@@ -26,7 +26,7 @@
   display: flex;
   flex-direction: column;
   margin-bottom: 20px;
-  height: calc(100vh - 112px);
+  padding: 0 20px;
   overflow: auto;
 }
 
