--- a/src/samples/bp/styling.scss
+++ b/src/samples/bp/styling.scss
@@ -25,16 +25,38 @@
     }
 }
 
-.blue {
-    background-color: lighten($color: blue, $amount: 45);
+.year {
+    background-color: lighten($color: #0683F9, $amount: 45);
 }
 
-.green {
-    background-color: lighten($color: green, $amount: 70);
+.quarter {
+    background-color: lighten($color: #0683F9, $amount: 35);
 }
 
-.red {
-    background-color: lighten($color: red, $amount: 45);
+.month {
+    background-color: #8080801a;
+}
+
+.editable {
+    &.quarter {
+        background-color: lighten($color: #0683F9, $amount: 45);
+    }
+    
+    &.month {
+        background-color: lighten($color: #0683F9, $amount: 40);
+    }
+}
+
+.rg-nonEditableNumber-cell { 
+    justify-content: flex-end;
+}
+
+.rg-number-cell {
+    transition: 0.15s;
+    &:hover {
+        color: white;
+        background-color: lighten($color: #0683F9, $amount: 10);
+    }
 }
 
 #bp-sample {
