--- a/src/samples/bp/styling.scss
+++ b/src/samples/bp/styling.scss
@@ -1,63 +1,66 @@
-.rg-horizontalGroup-cell {
-    justify-content: space-between;
-    .chevron {
-        .icon {
-            margin-top: -0.05em;
+.bp-sample {
+    .rg-horizontalGroup-cell {
+        justify-content: space-between;
+        .chevron {
+            .icon {
+                margin-top: -0.05em;
+            }
+            pointer-events: auto;
+            display: flex;
+            justify-content: center;
+            font-weight: bold;
+            margin-right: 1em * 0.1;
+            cursor: pointer;
+            transition: 200ms all ease-in-out;
+            height: 1em;
+            width: 1em;
         }
-        pointer-events: auto;
-        display: flex;
-        justify-content: center;
-        font-weight: bold;
-        margin-right: 1em * 0.1;
-        cursor: pointer;
-        transition: 200ms all ease-in-out;
-        height: 1em;
-        width: 1em;
+        .no-child {
+            width: 0.5em;
+        }
+        &.expanded .chevron {
+            transform: rotate(180deg);
+        }
+        &.collapsed .chevron {
+            transform: rotate(0deg);
+        }
     }
-    .no-child {
-        width: 0.5em;
-    }
-    &.expanded .chevron {
-        transform: rotate(180deg);
-    }
-    &.collapsed .chevron {
-        transform: rotate(0deg);
-    }
-}
-
-.year {
-    background-color: lighten($color: #0683F9, $amount: 45);
-}
-
-.quarter {
-    background-color: lighten($color: #0683F9, $amount: 35);
-}
-
-.month {
-    background-color: #8080801a;
-}
-
-.editable {
-    &.quarter {
+    
+    .year {
         background-color: lighten($color: #0683F9, $amount: 45);
     }
     
-    &.month {
-        background-color: lighten($color: #0683F9, $amount: 40);
+    .quarter {
+        background-color: lighten($color: #0683F9, $amount: 35);
+    }
+    
+    .month {
+        background-color: #8080801a;
+    }
+    
+    .editable {
+        &.quarter {
+            background-color: lighten($color: #0683F9, $amount: 45);
+        }
+        
+        &.month {
+            background-color: lighten($color: #0683F9, $amount: 40);
+        }
+    }
+    
+    .rg-nonEditableNumber-cell { 
+        justify-content: flex-end;
+    }
+    
+    .rg-number-cell {
+        transition: 0.15s;
+        &:hover {
+            color: white;
+            background-color: lighten($color: #0683F9, $amount: 10);
+        }
     }
 }
 
-.rg-nonEditableNumber-cell { 
-    justify-content: flex-end;
-}
-
-.rg-number-cell {
-    transition: 0.15s;
-    &:hover {
-        color: white;
-        background-color: lighten($color: #0683F9, $amount: 10);
-    }
-}
 
 #bp-sample {
     @import '@silevis/reactgrid/styles.scss';
